Modified to start with a blank page if ZIP Code is not provided

--- a/shops/templates/shops/shop_list.html
+++ b/shops/templates/shops/shop_list.html
@@ -1,48 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>List of Repair Shops</title>
-    <style>
-        .search-form {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 10px;
-        }
-        .search-form label,
-        .search-form input {
-            margin: 5px;
-        }
-        .search-results {
-            margin-top: 20px;
-        }
-    </style>
+    <title>Repair Shops</title>
 </head>
 <body>
-    <h1>List of Repair Shops</h1>
-    <form method="GET" action="." class="search-form">
+    <h1>Repair Shops</h1>
+    <form method="get">
         <label for="make">Make:</label>
         <input type="text" id="make" name="make" value="{{ make }}">
         <label for="category">Category:</label>
         <input type="text" id="category" name="category" value="{{ category }}">
-        <label for="zip_code">Zip Code:</label>
+        <label for="zip_code">ZIP Code:</label>
         <input type="text" id="zip_code" name="zip_code" value="{{ zip_code }}">
-        <input type="submit" value="Search">
+        <button type="submit">Search</button>
     </form>
-    <div class="search-results">
+    {% if shops %}
         <ul>
             {% for shop in shops %}
-            <li>
-                <strong>{{ shop.name }}</strong><br>
-                Address: {{ shop.formatted_address }}<br>
-                Phone: {{ shop.phone_number }}<br>
-                Website: <a href="{{ shop.website }}">{{ shop.website }}</a><br>
-                Rating: {{ shop.rating }}<br>
-                Total Reviews: {{ shop.user_ratings_total }}<br>
-            </li>
+                <li>{{ shop.name }} - {{ shop.rating }} stars - {{ shop.user_ratings_total }} reviews - {{ shop.phone_number }} - <a href="{{ shop.website }}">{{ shop.website }}</a></li>
             {% endfor %}
         </ul>
-    </div>
+    {% else %}
+        <p>No shops found. Please enter a ZIP Code to search for repair shops.</p>
+    {% endif %}
 </body>
 </html>
-
