--- a/shops/templates/shops/shop_list.html
+++ b/shops/templates/shops/shop_list.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Repair Shops</title>
+    <title>List of Repair Shops</title>
 </head>
 <body>
     <h1>Repair Shops</h1>
     <form method="get">
-        <label for="make">Make:</label>
-        <input type="text" id="make" name="make" value="{{ make }}">
-        <label for="category">Category:</label>
-        <input type="text" id="category" name="category" value="{{ category }}">
-        <label for="zip_code">ZIP Code:</label>
-        <input type="text" id="zip_code" name="zip_code" value="{{ zip_code }}">
+        <input type="text" name="make" placeholder="Make" value="{{ make }}">
+        <input type="text" name="category" placeholder="Category" value="{{ category }}">
+        <input type="text" name="zip_code" placeholder="ZIP Code" value="{{ zip_code }}">
         <button type="submit">Search</button>
     </form>
-    {% if shops %}
-        <ul>
-            {% for shop in shops %}
-                <li>{{ shop.name }} - {{ shop.rating }} stars - {{ shop.user_ratings_total }} reviews - {{ shop.phone_number }} - <a href="{{ shop.website }}">{{ shop.website }}</a></li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>No shops found. Please enter a ZIP Code to search for repair shops.</p>
-    {% endif %}
+
+    <ul>
+    {% for shop in shops %}
+        <li>
+            <strong>{{ shop.name }}</strong><br>
+            Address: {{ shop.formatted_address }}<br>
+            Phone: {{ shop.phone_number }}<br>
+            Website: <a href="{{ shop.website }}">{{ shop.website }}</a><br>
+            Rating: {{ shop.rating }}<br>
+            Total Reviews: {{ shop.user_ratings_total }}<br>
+        </li>
+        <hr>
+    {% endfor %}
+    </ul>
 </body>
 </html>
