Added support for searching by city location

--- a/shops/templates/shops/shop_list.html
+++ b/shops/templates/shops/shop_list.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>List of Repair Shops</title>
+    <title>Repair Shops</title>
 </head>
 <body>
     <h1>Repair Shops</h1>
     <form method="get">
-        <input type="text" name="make" placeholder="Make" value="{{ make }}">
-        <input type="text" name="category" placeholder="Category" value="{{ category }}">
-        <input type="text" name="zip_code" placeholder="ZIP Code" value="{{ zip_code }}">
+        <label for="make">Make:</label>
+        <input type="text" id="make" name="make" value="{{ make }}">
+        <label for="category">Category:</label>
+        <input type="text" id="category" name="category" value="{{ category }}">
+        <label for="location">Location (ZIP Code or City):</label>
+        <input type="text" id="location" name="location" value="{{ location }}">
         <button type="submit">Search</button>
     </form>
-
     <ul>
-    {% for shop in shops %}
-        <li>
-            <strong>{{ shop.name }}</strong><br>
-            Address: {{ shop.formatted_address }}<br>
-            Phone: {{ shop.phone_number }}<br>
-            Website: <a href="{{ shop.website }}">{{ shop.website }}</a><br>
-            Rating: {{ shop.rating }}<br>
-            Total Reviews: {{ shop.user_ratings_total }}<br>
-        </li>
-        <hr>
-    {% endfor %}
+        {% for shop in shops %}
+            <li>{{ shop.name }} - {{ shop.rating }} stars - {{ shop.user_ratings_total }} reviews - {{ shop.phone_number }} - <a href="{{ shop.website }}">{{ shop.website }}</a></li>
+        {% endfor %}
     </ul>
 </body>
 </html>
