Updated shop_list.html for better formatting and views.py with API key and address

--- a/shops/templates/shops/shop_list.html
+++ b/shops/templates/shops/shop_list.html
@@ -21,6 +21,7 @@
                 <p>{{ shop.rating }} stars</p>
                 <p>{{ shop.user_ratings_total }} reviews</p>
                 <p>{{ shop.phone_number }}</p>
+                <p>{{ shop.address }}</p>
                 <p><a href="{{ shop.website }}">{{ shop.website }}</a></p>
             </li>
         {% endfor %}
