Made shop names bold in shop_list.html

--- a/shops/templates/shops/shop_list.html
+++ b/shops/templates/shops/shop_list.html
@@ -17,7 +17,7 @@
     <ul>
         {% for shop in shops %}
             <li>
-                <p>{{ shop.name }}</p>
+                <p><strong>{{ shop.name }}</strong></p>
                 <p>{{ shop.rating }} stars</p>
                 <p>{{ shop.user_ratings_total }} reviews</p>
                 <p>{{ shop.phone_number }}</p>
