--- a/shops/templates/shops/shop_list.html
+++ b/shops/templates/shops/shop_list.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Repair Shops</title>
+    <title>List of Repair Shops</title>
+    <style>
+        .search-form {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 10px;
+        }
+        .search-form label,
+        .search-form input {
+            margin: 5px;
+        }
+        .search-results {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Repair Shops</h1>
-    <form method="get" action=".">
-        Make: <input type="text" name="make" value="{{ make }}">
-        Category: <input type="text" name="category" value="{{ category }}">
-        Location (ZIP Code or City): <input type="text" name="location" value="{{ location }}">
-        <button type="submit">Search</button>
+    <h1>List of Repair Shops</h1>
+    <form method="GET" action="." class="search-form">
+        <label for="make">Make:</label>
+        <input type="text" id="make" name="make" value="{{ make }}">
+        <label for="category">Category:</label>
+        <input type="text" id="category" name="category" value="{{ category }}">
+        <label for="location">Location (ZIP Code or City):</label>
+        <input type="text" id="location" name="location" value="{{ location }}">
+        <input type="submit" value="Search">
     </form>
-    <ul>
-        {% for shop in shops %}
+    <div class="search-results">
+        <ul>
+            {% for shop in shops %}
             <li>
                 <strong>{{ shop.name }}</strong><br>
                 Address: {{ shop.formatted_address }}<br>
@@ -20,9 +39,10 @@
                 Website: <a href="{{ shop.website }}">{{ shop.website }}</a><br>
                 Rating: {{ shop.rating }}<br>
                 Total Reviews: {{ shop.user_ratings_total }}<br>
-                <a href="{{ shop.reviews_link }}">Read Reviews</a>
+                <a href="{{ shop.reviews_link }}">Read Reviews</a><br>
             </li>
-        {% endfor %}
-    </ul>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
